--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "kndb_bot",
   "version": "1.0.0",
   "description": "bot_start",
-  "main": "index.js",
+  "main": "app.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
