--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "register": "node commands.js",
+    "earthquake": "node earthquake.js",
+    "dev": "nodemon app.js"
   },
   "author": "nokgi24",
   "license": "ISC",
