--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "discord-interactions": "^4.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "ngrok": "^5.0.0-beta.2",
     "node-fetch": "^3.3.2",
     "request": "^2.88.2",
     "xml-js": "^1.6.11"
