--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "axios": "^1.7.3",
     "discord-interactions": "^4.0.0",
+    "discord.js": "^14.15.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "ngrok": "^5.0.0-beta.2",
